# CudaSoftCollisions

./: .gitignore  CMakeLists.txt  README.md
data/dataExampleFolder/: dataExampleFile.txt
data/meshes/: bunny_surface.ply  icosahedron_surface.ply  icosahedron_vol.mesh  icosahedron_vol.vtk  intersectingSphere.ply  intersectingSphere.vtk  sphere_surface.ply  test.ply  test3Dmodel.ply  torus_surface.ply  torus_surface_highres.ply  torus_vol.mesh  torus_vol.vtk  torus_vol_highres.mesh  torus_vol_highres.vtk  triangularDipyramid_surface.ply  triangularDipyramid_volume.mesh  triangularDipyramid_volume.vtk  trickyTets.ply  trickyTets2.ply  twoSpheresMovements.vtk
data/meshes/intersectingSpheres/: s1.mesh  s1.ply  s1.vtk  s2.mesh  s2.ply  s2.vtk
data/meshes/intersectingTet/: tet1.ply  tet2.ply
data/meshes/notIntersectingTet/: tet2.ply
helpers/: CMakeLists.txt  pathsHelpers.hpp.in
include/csc/: MeshHelpers.hpp  MeshStructureCollider.hpp  MeshStructureExtractor.hpp
include/internalLibraryExample/: MieosProjectOrganiserIntLib.hpp
src/csc/: CMakeLists.txt  MeshHelpers.cpp  MeshStructureCollider.cu  MeshStructureExtractor.cpp
src/csc/cuda_src/: CMakeLists.txt  MeshStructureCollider.cu
src/csc/cuda_src/kernels/: csc_core.h  csc_geometry_helpers.h  csc_spheres_handling.h  csc_tetahedron_handling.h
src/internalLibraryExample/: CMakeLists.txt  MieosProjectOrganiserIntLib.cpp
src/tests/: CMakeLists.txt
src/tests/01_UseExternalLibExample/: CMakeLists.txt  main.cpp
src/tests/02_UseInternalLibExample/: CMakeLists.txt  main.cpp
src/tests/03_UseHelpers/: CMakeLists.txt  main.cpp
src/tests/unit/: CMakeLists.txt  debugRegistration.cpp  uTest_bunnyCollision.cpp  uTest_bunnyCollision_movements.cpp  uTest_collisionTwoTet.cpp  uTest_collisionTwoTet_movements.cpp  uTest_extractLoadAndTest.cpp  uTest_extractModelFromFile.cpp  uTest_extractSurfaceVolume.cpp  uTest_simpleCollision.cpp  uTest_sphereCollision.cpp  uTest_trickyCollision.cpp  uTest_trickyCollision2.cpp  uTest_twoSpheresCollision_movements.cpp
