#Unit tests

#Create the subdirectory for the binary files
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests/unit)

#Include the headers
#NONE

#Set the output directory
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests/unit)

#Create the binary files
add_executable(uTest_extractSurfaceVolume uTest_extractSurfaceVolume.cpp)
add_executable(uTest_extractModelFromFile uTest_extractModelFromFile.cpp)
add_executable(uTest_extractLoadAndTest uTest_extractLoadAndTest.cpp)
add_executable(uTest_simpleCollision uTest_simpleCollision.cpp)
add_executable(uTest_collisionTwoTet uTest_collisionTwoTet.cpp)
add_executable(uTest_trickyCollision uTest_trickyCollision.cpp)
add_executable(uTest_trickyCollision2 uTest_trickyCollision2.cpp)
add_executable(uTest_sphereCollision uTest_sphereCollision.cpp)
add_executable(uTest_bunnyCollision uTest_bunnyCollision.cpp)
add_executable(uTest_collisionTwoTet_movements uTest_collisionTwoTet_movements.cpp)
add_executable(uTest_bunnyCollision_movements uTest_bunnyCollision_movements.cpp)
add_executable(uTest_twoSpheresCollision_movements uTest_twoSpheresCollision_movements.cpp)
target_link_libraries(uTest_extractSurfaceVolume cudaSoftCollisions)
target_link_libraries(uTest_extractModelFromFile cudaSoftCollisions)
target_link_libraries(uTest_extractLoadAndTest cudaSoftCollisions)
target_link_libraries(uTest_simpleCollision cudaSoftCollisions)
target_link_libraries(uTest_collisionTwoTet cudaSoftCollisions)
target_link_libraries(uTest_trickyCollision cudaSoftCollisions)
target_link_libraries(uTest_trickyCollision2 cudaSoftCollisions)
target_link_libraries(uTest_sphereCollision cudaSoftCollisions)
target_link_libraries(uTest_bunnyCollision cudaSoftCollisions)
target_link_libraries(uTest_collisionTwoTet_movements cudaSoftCollisions)
target_link_libraries(uTest_bunnyCollision_movements cudaSoftCollisions)
target_link_libraries(uTest_twoSpheresCollision_movements cudaSoftCollisions)
